welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: not found: value esle
		esle { return false }
                ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (!estFaceMur()) { 
        ^